# voice-sandwich-demo

./: .gitignore  README.md
.codex/: AGENTS.md
components/pipecat-quickstart/: bot.py  record_audio.py  ws_agent_transport.py
components/python/src/: assemblyai_stt.py  deepgram_stt.py  deepgram_tts.py  elevenlabs_tts.py  main.py  utils.py
components/python/src/voice_evals/: __init__.py  audio_utils.py  config.py  run.py
components/typescript/src/: index.ts
components/user_simulation/: README_pipecat_ws.md  bot.py  bot_pipecat.py  file_audio_transport.py  pipecat_compat.py  pyproject.toml  ws_agent_transport_pipecat.py
components/user_simulation/e11labs/: main.py
components/user_simulation/vapi/: run_single.py  run_turns.py
components/voice_agent/: pyproject.toml  voice_evals_config.toml
components/voice_agent/src/: assemblyai_stt.py  deepgram_stt.py  events.py  main.py  utils.py
components/voice_agent/src/voice_evals/: simulator.py  ws_agent.py
components/voice_agent_pipecat/: README.md  env.example  pyproject.toml
components/voice_agent_pipecat/src/: main.py
python/: pyproject.toml
python/src/: elevenlabs_tts.py  voice_agent.py
